<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WelcomeActivity">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/banner_description"
            android:src="@drawable/image_dicoding"
            android:alpha="0" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/welcome_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:alpha="0" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/app_description"
            android:alpha="0" />

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:backgroundTint="@color/navy"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0"
                android:backgroundTint="@color/navy"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
